update home success123456

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,11 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Hello jenkin succes</h1>
-<h1>Hello jenkin succes</h1>
-<h1>Hello jenkin succes</h1>
-<h1>Hello jenkin succes</h1>
-<h1>Hello jenkin succes</h1>
-<h1>Hello jenkin succes</h1>
+<h1>Hello jenkin succes1</h1>
+<h1>Hello jenkin succes2</h1>
+<h1>Hello jenkin succes3</h1>
+<h1>Hello jenkin succes4</h1>
+<h1>Hello jenkin succes5</h1>
+<h1>Hello jenkin succes6</h1>
 </body>
 </html>
